2006-04-05  Jules Colding  <colding@omesc.com>

	* libIDL.spec.in: rpmbuild fixes (added missing files to %files) 
	(License): Fix tag (was "Copyright").

2006-02-02  Mark McLoughlin  <mark@skynet.ie>

	* util.c: (IDL_tree_free_real), (IDL_tree_free): handle
	IDLN_WIDE_CHAR and IDLN_WIDE_STRING

2006-02-02  Mark McLoughlin  <mark@skynet.ie>

	* util.c: (IDL_tree_free): handle IDLN_SRCFILE
	
2005-08-08  Kjartan Maraas  <kmaraas@gnome.org>

	* util.c: (yyerrorl), (yywarningl): Remove use of deprecated
	function g_basename(). Closes bug #133167.

2005-07-25  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 0.8.7.

==================== 0.8.6 ====================

2005-07-25  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 0.8.6.

2005-02-23  Tor Lillqvist  <tml@novell.com>

	* util.c (IDL_parse_filename): Use g_path_get_dirname(),
	g_strconcat(), g_strdup_printf(). Don't bother checking g_malloc()
	for failure in some places, g_malloc() doesn't return if you are
	out of memory. And anyway, in other places the code didn't check.

2005-02-22  Tor Lillqvist  <tml@novell.com>

	* libIDL-zip.in: New file, for building libIDL zipfiles for Win32.
	
	* Makefile.am (EXTRA_DIST)
	* configure.in: Expand and distribute it.

	* util.c (IDL_parse_filename): Don't use 2>/dev/null on
	Win32. Instead, just do a bit of file descriptor acrobatics with
	dup() and dup2() for the duration of the popen().

2005-02-05  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.in: Post-release version bump to 0.8.6.

==================== 0.8.5 ====================

2005-02-05  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* NEWS: Update.

2004-11-12  Jules Colding  <colding@omesc.com>

	* parser.y: add octet_type to const_type rule.

2004-11-05  Kjartan Maraas  <kmaraas@gnome.org>

	* parser.y:
	* util.c: (IDL_tree_is_recursive): Fix a couple of warnings
	from sparse.

2004-10-07  James Henstridge  <james@jamesh.id.au>
