@@ -1,3 +1,8 @@
+2006-07-17  Pascal Terjan  <pterjan@linuxfr.org>
+
+	* util.c: remove dead code in IDL_parse_filename_with_input and
+	IDL_parse_filename (closes #341383 and coverity #69, #70)
+
 2006-04-05  Jules Colding  <colding@omesc.com>
 
 	* libIDL.spec.in: rpmbuild fixes (added missing files to %files) 
